force-app/main/default/objects/Event__c/fields/Assigned_Staff__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Staff</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Events (Assigned Staff)</relationshipLabel>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>