force-app/main/default/objects/Event__c/fields/Assigned_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Volunteers__c</fullName>
    <label>Assigned Volunteers</label>
    <summaryForeignKey>volunteer__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>