force-app/main/default/objects/Event__c/fields/Coordinator_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Coordinator_Contact_No__c</fullName>
    <label>Coordinator Contact No</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>