force-app/main/default/objects/Event__c/fields/Days_Left__c.field-meta.xml
<CustomField>
    <fullName>Days_Left__c</fullName>
    <formula>Start_Date__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>