force-app/main/default/objects/Event__c/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <displayFormat>E-{000}</displayFormat>
    <label>Event Code</label>
    <type>AutoNumber</type>
</CustomField>