force-app/main/default/objects/Event__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <label>Event Name</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>