force-app/main/default/objects/Event__c/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <formula>If(
Today()  &lt;  Start_Date__c ,&quot;Upcoming&quot;,
If(
Today() &gt;  End_Date__c , &quot;Completed&quot;,&quot;Ongoing&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Status</label>
    <type>Text</type>
</CustomField>