force-app/main/default/objects/Event__c/fields/participant__c.field-meta.xml
<CustomField>
    <fullName>participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>participant</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>