force-app/main/default/objects/Event__c/fields/Passanger_Count__c.field-meta.xml
<CustomField>
    <fullName>Passanger_Count__c</fullName>
    <label>Passanger Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>