force-app/main/default/objects/Event__c/fields/Volunteer_Requried__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Requried__c</fullName>
    <label>Volunteer Requried</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>