force-app/main/default/objects/Event__c/recordTypes/Cultural_Event.recordType-meta.xml
<RecordType>
    <fullName>Cultural_Event</fullName>
    <active>true</active>
    <label>Cultural Event</label>
</RecordType>