force-app/main/default/objects/Event__c/recordTypes/Hackathon.recordType-meta.xml
<RecordType>
    <fullName>Hackathon</fullName>
    <active>true</active>
    <label>Hackathon</label>
</RecordType>