force-app/main/default/objects/Event__c/recordTypes/Seminar.recordType-meta.xml
<RecordType>
    <fullName>Seminar</fullName>
    <active>true</active>
    <label>Seminar</label>
</RecordType>