force-app/main/default/objects/Event__c/recordTypes/Sports_Event.recordType-meta.xml
<RecordType>
    <fullName>Sports_Event</fullName>
    <active>true</active>
    <label>Sports Event</label>
</RecordType>