force-app/main/default/objects/Event__c/recordTypes/Technical_Event.recordType-meta.xml
<RecordType>
    <fullName>Technical_Event</fullName>
    <active>true</active>
    <label>Technical Event</label>
</RecordType>