force-app/main/default/objects/Event__c/recordTypes/Workshop.recordType-meta.xml
<RecordType>
    <fullName>Workshop</fullName>
    <active>true</active>
    <label>Workshop</label>
</RecordType>