force-app/main/default/objects/Event__c/validationRules/Cannot_Be_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Be_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c  &lt; Today()</errorConditionFormula>
    <errorMessage>Event Date Cannot be Past</errorMessage>
</ValidationRule>