force-app/main/default/objects/Event__c/validationRules/Capacity_Greater_than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity_Greater_than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Capacity__c   &lt;  0</errorConditionFormula>
    <errorMessage>Capacity must be greater than Zero</errorMessage>
</ValidationRule>