force-app/main/default/objects/Event__c/validationRules/Validate_Event_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Event_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Event_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Event_Date__c</errorDisplayField>
    <errorMessage>Past dates are not allowed. Please select today or a future date.</errorMessage>
</ValidationRule>