force-app/main/default/objects/Event__c/validationRules/Validate_Event_Duration.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Event_Duration</fullName>
    <active>true</active>
    <errorConditionFormula>Duration__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Duration__c</errorDisplayField>
    <errorMessage>Duration must be greater than 0 hours.</errorMessage>
</ValidationRule>